Fix long dropdown names overflowing (#2693)
* Update custom.css

* Update custom.css

--- a/custom/panel_templates/Default/assets/css/custom.css
+++ b/custom/panel_templates/Default/assets/css/custom.css
@@ -401,6 +401,10 @@ body {
     max-width: none;
 }
 
+.collapse-item {
+    white-space: normal !important;
+}
+
 .table-hover.dataTables-users tbody tr {
     cursor: pointer;
 }
